# red-teaming

./: .gitignore  LICENSE  README.md  atk_prmpt_generator.py  collect_samples.py  collect_samples_2.py  collect_samples_2mp.py  dataset.py  enron_file_to_dataset.py  enron_file_to_dataset_mp.py  eval.py  eval364.py  eval_20.py  eval_ori.py  eval_origin.py  eval_pii.py  eval_v2.py  main.py  pyproject.toml  requirements.txt  run_transfer.py  utils.py  victim_test.py
configs/: dolly.json  gemma.json  gpt2.json  llama.json
data/: check_dataset.py  dataset_pii_count.py
prompts/: alpaca_pii.jsonl  attack_prompt.jsonl  attack_prompt_v2.jsonl  count_.py  merge_data.ipynb  sft_dataset.json  sft_instruction_jcha.json  sft_instructions_pii.json
safety_dataset/: create_safety_response.py
trainers/: gfn_hf_trainer.py  gfn_trainer.py  mle_trainer.py  safety_trainer.py  sft_trainer.py
w00/: build_email_dataset.py  eval_pii.py  extract_pii_from_enron.py  extract_pii_from_enron_mp.py  final_result.py  fsdp_launch.sh  fsdp_pii_finetuning.py  ft-gpt-neo-v2.py  gpt_neo_ft_fsdp.py  maildir_to_jsonl.py  model_tests.py  pii_finetuning.py  pii_reward_classifier.py  result_eval.py  result_eval_2.py  train_email_lora.py  train_full.py  utils.py
