[project]
name = "pii-redteam"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "csv-logger>=1.3.0",
    "editdistance>=0.8.1",
    "peft>=0.16.0",
    "presidio-analyzer>=2.2.359",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
    "transformers>=4.54.0",
    "typed-argument-parser>=1.10.1",
    "vllm>=0.10.0",
    "wandb>=0.21.0",
]
